--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import-normalize; /* bring in normalize.css styles */
 
+/* RESET */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,4 +13,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+/* UTILS */
+.wrapper {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 1.2rem;
 }
