--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -3,26 +3,36 @@
   flex-direction: column;
   gap: 10px;
 
-  padding-left: 20px;
+  padding-left: 35px;
+
+  font-size: 0.9rem;
 }
 
 .item {
   position: relative;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
-
 .item::before {
   content: '';
   position: absolute;
 
   left: -25px;
-  top: 4px;
+  top: 3px;
   width: 18px;
   aspect-ratio: 1;
   background-image: url('/src/images/contacts.svg');
 }
+@media screen and (min-width: 320px) {
+  .list {
+    font-size: 1rem;
+  }
+}
 
+.phone-number {
+  width: fit-content;
+}
 .btn {
   width: 20px;
   aspect-ratio: 1;
