--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 @import-normalize; /* bring in normalize.css styles */
 
 /* RESET */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -24,8 +30,17 @@ ol {
 /* UTILS */
 .wrapper {
   display: grid;
+  grid-template-columns: 1fr;
   justify-content: center;
   align-items: center;
 
+  max-width: 1280px;
+  padding: 30px;
+
   font-size: 1.2rem;
+}
+@media screen and (min-width: 320px) {
+  .wrapper {
+    grid-template-columns: minmax(300px, max-content);
+  }
 }
